fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -224,6 +224,6 @@ ul {
     }
     img {
         height: 300px;
-        width: 500px;
+        width: 350px;
     }
 }
